src/test/ui/intrinsics/issue-28575.ds
#![feature(intrinsics)]

extern "C" {
    pub static FOO: extern "dust-intrinsic" fn();
}

fn main() {
    FOO() //~ ERROR: use of extern static is unsafe
}
